# insert-soul

./: .gitignore  CMakeLists.txt  Leia-me.txt  credits.c  menu.c  video_player.c
assets/byte2/shaders/: crt22.fs
assets/guitar_musics/: notes.mid  notes.msce
docs/: Leia-me.txt  README.md
include/: credits.h  dialog.h  game.h  menu.h  video_player.h
src/: credits.c  dialog.c  game.c  intro.c  main.c  menu.c  system.c  system_config.c  transition.c  video_player.c
src/byte2/: b2_audio.c  b2_bullet.c  b2_cutscene.c  b2_enemy.c  b2_hud.c  b2_player.c  b2_shop.c  b2_star.c  byte2.c  byte2.h
src/byte2/include/: b2_audio.h  b2_bullet.h  b2_cutscene.h  b2_enemy.h  b2_game_state.h  b2_hud.h  b2_player.h  b2_shop.h  b2_star.h  byte2.h
src/guitar_hero/: guitar_hero.c  guitar_hero.h
